src/sass/pages/_homepage.scss
.homepage {
  .hero {
    display: flex;
    justify-content: center;
    align-items: center;
    max-height: 550px;
    gap: 20px;

    .register-buttons {
      display: flex;
      gap: 30px;

      button {
        font-size: 2rem;
        border-radius: 25px;
        border: 1px transparent;
        color: #fff;
        padding: 8px 22px;
      }

      .login {
        background-color: #262626;
      }
      .register {
        background-color: #6246ea;
      }

      .logout {
        background-color: #262626;
      }
    }

    h1 {
      font-size: 5.1rem;
    }

    p {
      font-size: 2.5rem;
      color: #6246ea;
    }

    img {
      height: 560px;
      max-width: 560px;
    }
  }

  .trending {
    display: flex;
    justify-content: space-between;
    margin-bottom: 12px;

    h2 {
      margin: 0;
    }

    button {
      background-color: #262626;
      border: 1px transparent;
      border-radius: 10px;
      color: #fff;
      cursor: pointer;
      padding: 8px 22px;
    }
  }

  .carrousel {
    img {
      max-width: 230px;
      height: 250px;
      height: 160px;
      border-radius: 25px;
      object-fit: cover;
    }
    .carrousel-container {
      gap: 12px;
    }
    .carrousel-navigation {
      display: none;
    }
  }
}

@media (max-width: 1150px) {
  .homepage .hero {
    img {
      max-width: 500px;
    }
  }
}
@media (max-width: 1024px) {
  .homepage {
    .trending {
      margin: 30px 0;
    }
    .hero {
      max-height: fit-content;
      flex-direction: column;

      img {
        height: 200px;
      }
    }
  }
}

@media (max-width: 768px) {
  .homepage .carrousel {
    overflow: visible;
  }
  .homepage .carrousel .carrousel-container {
    flex-direction: column;
    align-items: center;
  }
  .homepage .carrousel img {
    max-width: 90vw;
    height: auto;
  }
}

